@@ -2,9 +2,16 @@
 
 SimGrid (3.24.1) NOT RELEASED YET (v3.25 expected December 22. 2029, 04:19 UTC)
 
+Kernel:
+- In simgrid::kernel::resource::Model, the methods next_occuring_event*() have
+  been renamed to fix a spelling error. As usual, the previous definitions are
+  kept with a deprecation warning. However, to avoid runtime errors, it is now
+  forbidden to override these deprecated methods in a derived class. Please use
+  the new names immediately if you need to override them.
+
 Fixed bugs (FG#.. -> framagit bugs; FG!.. -> framagit merge requests):
  - GH#31: [MC] please provide an option to make MPI_Send asynchronous
- - GH#305: Unscheduled tasks are still excuted 
+ - GH#305: Unscheduled tasks are still excuted
  - FG!19: Removing RngStream
 
 ----------------------------------------------------------------------------
